--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ thread_local = "0.2.4"
 regex-syntax = { path = "regex-syntax", version = "0.3.4" }
 # For accelerating text search.
 simd = { version = "0.1.0", optional = true }
+jetscii = { path = "../jetscii", features = ["unstable"] }
 # For compiling UTF-8 decoding into automata.
 utf8-ranges = "0.1.3"
 
